[project]
name = "pid_adjust"
version = "0.1.1"
requires-python = ">=3.12, <3.13"

dependencies = [
    "streamlit==1.58.0",
    "fastapi",
    "uvicorn==0.30.1",

    "numpy==1.26.4",
    "scipy==1.12.0",
    "pandas==2.2.2",

    "opencv-python==4.10.0.84",
    "pillow==10.3.0",

    "plotly==5.22.0",
    "pyarrow==16.1.0",
    "pydeck==0.9.1",

    "requests==2.34.2",
    "python-multipart==0.0.30"
]
